--- a/resources/sass/exhibition/_details-component.scss
+++ b/resources/sass/exhibition/_details-component.scss
@@ -36,6 +36,7 @@
 .accordion-item button {
     align-items: center;
     background: transparent;
+    color: #000;
     border: 0;
     display: flex;
     justify-content: space-between;
