--- a/resources/sass/support-us/_featured-image.scss
+++ b/resources/sass/support-us/_featured-image.scss
@@ -1,6 +1,8 @@
 /* featured-image-component start*/
+.featured_image.container,
 .featured_image {
-    max-width: 1290px;
+    max-width: 800px;
+    width: 100%;
     margin: 56px auto;
     padding: 0 16px;
 
