WIP: anchor padding and gap

--- a/resources/sass/visit-us/_anchor-navigation.scss
+++ b/resources/sass/visit-us/_anchor-navigation.scss
@@ -26,7 +26,7 @@
             display: inline-block;
             width: max-content;
             font-weight: 500;
-            padding: 10px;
+            padding: 8px 0 4px 10px;
             text-decoration: none;
             border-bottom: 2px solid transparent;
         }
@@ -51,11 +51,11 @@
     ul {
         align-items: baseline;
         display: flex;
-        gap: 1rem;
+        gap: 1.2rem;
         padding-block: 1rem;
         li a {
             border-bottom: 2px solid transparent;
-            padding: 8px 10px 4px 10px;
+            padding: 8px 0 4px 10px;
             font-weight: 600;
             font-size: 1.125rem;
             line-height: 23px;
