Finish hero and tune up other components styling-wise
Also rejig the 50/50 section to acommodate for a link to be added to the end of the section

--- a/resources/sass/homepage/_banner.scss
+++ b/resources/sass/homepage/_banner.scss
@@ -24,8 +24,9 @@
 }
 
 .banner-component--home .section-heading + .banner-component .component-ff {
-    margin-top: 60px;
-    @media (min-width: 600px) {
-        margin-top: 30px;
-    }
+    margin-top: 30px;
+}
+
+.banner-component--home .banner-component > .container {
+    padding: 0;
 }
