--- a/resources/sass/support-us/_fifty-fifty.scss
+++ b/resources/sass/support-us/_fifty-fifty.scss
@@ -85,3 +85,15 @@ div.banner-component {
 }
 
 /* 50/50-component end */
+
+/* 50/50 section */
+
+// Sorry for the placement of this - tight deadline - plan to clean up later
+
+.fifty-fifty-section .container-home-cards.container-support-cards {
+    padding: 0;
+}
+
+.fifty-fifty-section__footer {
+    padding-bottom: 60px;
+}
