--- a/resources/sass/exhibition/_quote.scss
+++ b/resources/sass/exhibition/_quote.scss
@@ -6,6 +6,14 @@
 .quote-body {
     border-radius: 8px;
     padding: 30px 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    @media (min-width: 990px) {
+        flex-direction: row;
+        gap: 70px;
+    }
 }
 .quote-body--green {
     background-color: #D6E4B4;
@@ -15,17 +23,25 @@
 }
 .quote__image {
     max-inline-size: 50px;
+
+    @media (min-width: 990px) {
+        max-inline-size: 80px;
+        align-self: center;
+        width: 100%;
+    }
 }
+
+
 .quote-text {
     margin-top: 20px;
 }
 
 p.quote-text__quote {
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 500;
 }
 
 .quote-text__accreditation {
-    font-size: 17px;
+    font-size: 1.065rem;
     font-weight: 400;
 }
