--- a/resources/sass/support-us/_featured-image.scss
+++ b/resources/sass/support-us/_featured-image.scss
@@ -5,7 +5,7 @@
     width: 100%;
     margin: 56px auto;
     padding: 0 16px;
-
+    aspect-ratio: 16/9;
     @media screen and (min-width: 1320px) {
         padding: 0;
     }
