--- a/resources/sass/support-us/_featured-video.scss
+++ b/resources/sass/support-us/_featured-video.scss
@@ -4,6 +4,7 @@
     max-width: 800px;
     width: 100%;
     margin: 56px auto;
+    aspect-ratio: 16 / 9;
 
     @media screen and (min-width: 1320px) {
         padding: 0;
