--- a/resources/sass/visit-us/_museum-information.scss
+++ b/resources/sass/visit-us/_museum-information.scss
@@ -16,6 +16,8 @@
     }
 }
 .information-intro {
+    display: flex;
+    flex-direction: column;
     max-inline-size: 700px;
     margin-inline-end: 2.125rem;
     h2 {
@@ -25,6 +27,9 @@
     }
     p {
         margin: 12px 0;
+    }
+    > a.button--block:not(p + a.button--block) {
+        margin-top: auto;
     }
 }
 
