--- a/resources/sass/visit-us/visit-us.scss
+++ b/resources/sass/visit-us/visit-us.scss
@@ -76,3 +76,17 @@
         padding-inline: 0;
     }
 }
+
+
+
+.visit-us-landing > .support-grid {
+
+    margin-bottom: 0;
+
+}
+
+.visit-us-landing > .support-grid:not(:first-of-type) {
+
+    margin-top: 0;
+
+}
