--- a/resources/sass/visit-us/_museum-information.scss
+++ b/resources/sass/visit-us/_museum-information.scss
@@ -29,7 +29,7 @@
         margin: 12px 0;
     }
     a.button--block:not(p + a.button--block) {
-        margin-top: auto;
+        margin-top: 1rem;
     }
 }
 
