fix: exhibition details accordion additional link

--- a/resources/sass/exhibition/_details-component.scss
+++ b/resources/sass/exhibition/_details-component.scss
@@ -57,6 +57,12 @@
     padding-left: 4px;
 }
 
+.collapse-item-link {
+    margin-block-end: 20px;
+    display: inline-block;
+    color: #000;
+}
+
 .exhibition-details__card__details p[class] {
     align-items: center;
     display: flex;
