--- a/resources/sass/support-us/_fifty-fifty.scss
+++ b/resources/sass/support-us/_fifty-fifty.scss
@@ -35,6 +35,8 @@ div.banner-component {
     align-items: center;
     justify-content: center;
     background: #b50e5e;
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
 }
 
 .component-ff .content .container {
@@ -72,10 +74,13 @@ div.banner-component {
 
 .component-ff .image {
     width: 100%;
+    grid-column: 2 / -1;
+    grid-row: 1 / 2;
 }
 
 .component-ff .image img {
     width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
