Adjust 404 / 500 pages to remove the image of grumpy cat :(

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,6 +9,8 @@
 @import "_nav";
 @import "_cards";
 
+@import "views/404";
+
 @import 'support-us/_support-us';
 @import "exhibition/exhibition";
 @import "visit-us/visit-us";
