Add support for Soundcloud Embed component to exhibitions - if this works I'll add it to the accordion

--- a/resources/sass/exhibition/exhibition.scss
+++ b/resources/sass/exhibition/exhibition.scss
@@ -5,6 +5,7 @@
 @import '_text-component.scss';
 @import '_details-component.scss';
 @import '_quote.scss';
+@import '_soundcloud-component.scss';
 
 .single-exhibition {
     padding-inline: 30px;
