--- a/resources/sass/visit-us/_anchor-navigation.scss
+++ b/resources/sass/visit-us/_anchor-navigation.scss
@@ -45,7 +45,8 @@
 .anchor-navigation--large {
     background-color: white;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.06);
-    display: none;
+    // display: none;
+    display: block;
     top: 90px;
     z-index: 1029;
     ul {
@@ -64,14 +65,18 @@
             padding-left: 0;
         }
     }
+    
+    /**
     @media (min-width: 990px) {
         display: block;
     }
+    */
 }
 
 .anchor-navigation--small {
     background-color: white;
-    display: block;
+    //display: block;
+    display: none;
     top: 90px;
     padding: 19px 11px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.06);
@@ -85,9 +90,11 @@
         }
     }
 
+    /**
     @media (min-width: 990px) {
         display: none;
     }
+    */
 }
 
 .anchor-navigation__header {
