--- a/resources/sass/visit-us/_anchor-navigation.scss
+++ b/resources/sass/visit-us/_anchor-navigation.scss
@@ -12,7 +12,7 @@
 
     position: static;
 
-    @media (min-height: 600px) {
+    @media (min-height: 620px) {
         position: sticky;
         z-index: 1029;
     }
@@ -54,8 +54,9 @@
         align-items: baseline;
         display: flex;
         flex-flow: wrap;
-        gap: 1.2rem;
-        padding-block: 1rem;
+        gap: 0.5rem 1.1rem;
+        padding-block: 0.8rem;
+
         li a {
             border-bottom: 2px solid transparent;
             padding: 8px 0 4px 10px;
@@ -63,16 +64,17 @@
             font-size: 1.125rem;
             line-height: 23px;
         }
+
         li a:first-child {
             padding-left: 0;
         }
     }
     
-    /**
     @media (min-width: 990px) {
-        display: block;
+        ul {
+            padding-block: 1rem;
+        }
     }
-    */
 }
 
 .anchor-navigation--small {
